test/files/neg/procedure-removal.check
procedure-removal.scala:2: error: procedure syntax is unsupported: instead, add `: Unit =` to explicitly declare `bar`'s return type
  def bar {}
          ^
procedure-removal.scala:3: error: procedure syntax is unsupported: instead, add `: Unit` to explicitly declare `baz`'s return type
  def baz
         ^
procedure-removal.scala:4: error: procedure syntax is unsupported: instead, add `: Unit` to explicitly declare `boo`'s return type
  def boo(i: Int, l: Long)
                          ^
procedure-removal.scala:5: error: procedure syntax is unsupported: instead, add `: Unit =` to explicitly declare `boz`'s return type
  def boz(i: Int, l: Long) {}
                           ^
four errors found
